changed java version to 21; change kotlin version to 1.9.20Beta2; changed gradlew version to 8.4-rc-1-all; added repository and mongo config; adding current weather service;

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -45,5 +45,5 @@ spring-test = { group = "org.springframework", name = "spring-test", version.ref
 reactor-test = { group = "io.projectreactor", name = "reactor-test", version.ref = "io-projectreactor" }
 
 [bundles]
-web-test-bundle = ["junit-jupiter", "mockito", "spring-boot-starter-test", "reactor-test"]
+web-test-bundle = ["junit-jupiter", "mockito", "spring-test", "spring-boot-starter-test", "reactor-test"]
 logging-bundle = ["slf4j-api"]
