got db test instance in container running, along with integration tests for home weather; adding web client

--- a/openweather/src/test/resources/application-test.yml
+++ b/openweather/src/test/resources/application-test.yml
@@ -1,9 +1,11 @@
 spring:
   data:
     mongodb:
-      port: 27017
+      port: 27018
       username: "user"
       password: "pass"
       host: "localhost"
       database: "weather"
       authentication-database: "admin"
+server:
+  port: 8080
