--- a/openweather/src/test/resources/application-test.yml
+++ b/openweather/src/test/resources/application-test.yml
@@ -10,5 +10,6 @@ spring:
 server:
   port: 8080
 weather:
-  schema: "http"
-  sub-domain: "localhost"
+  home-weather:
+    schema: "http"
+    sub-domain: "localhost"
