adding apigateway deps; rewriting ports in microservices; removing test container from openweather;

--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
         - id: homeweather-route
           uri: ${HOMEWEATHER_ROUTE_URI:http://localhost:8082}
           predicates:
-            - Path=/open/**
+            - Path=/home/**
           filters:
             - PrefixPath=/api
             - AddResponseHeader=X-Powered-By,Gateway Service
