--- a/homeweather/src/test/resources/application-test.yml
+++ b/homeweather/src/test/resources/application-test.yml
@@ -4,3 +4,8 @@ weather:
   home-weather:
     schema: "http"
     sub-domain: "localhost"
+spring:
+  application:
+    name: "homeweather-test"
+gateway:
+  port: 8083
