--- a/openweather/src/main/resources/application.yml
+++ b/openweather/src/main/resources/application.yml
@@ -2,4 +2,7 @@ server:
   port: 8080
 weather:
   open-weather-api-url: "https://api.openweathermap.org/data/3.0/onecall"
-  weather-plan-open-url: "http://localhost:8080/open/current"
+  weather-plan-open-url: "http://localhost:8083/open/current"
+spring:
+  application:
+    name: "openweather"
