--- a/homeweather/src/main/resources/application.yml
+++ b/homeweather/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       port: 27017
       username: "user"
       password: "pass"
-      host: "localhost"
+      host: ${MONGO:localhost}
       database: "weather"
       authentication-database: "admin"
   application:
