--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,9 +14,12 @@ org-springframework-cloud-deps = "2023.0.0-RC1"
 #testcontainers
 org-testcontainers = "1.19.1"
 
+#logging
+ch-qos-logback = "1.4.11"
+org-slf4j = "2.0.6"
+
 #business logic
 org-modelmapper = "3.1.1"
-org-slf4j = "2.0.6"
 org-yaml = "2.2"
 
 #testing
@@ -40,6 +43,7 @@ spring-boot-dependencies = { group = "org.springframework.boot", name = "spring-
 spring-cloud-dependencies = { group = "org.springframework.cloud", name = "spring-cloud-dependencies", version.ref = "org-springframework-cloud-deps" }
 spring-boot-starter = { group = "org.springframework.boot", name = "spring-boot-starter" }
 spring-boot-starter-web = { group = "org.springframework.boot", name = "spring-boot-starter-web" }
+spring-boot-starter-actuator = { group = "org.springframework.boot", name = "spring-boot-starter-actuator" }
 spring-boot-starter-test = { group = "org.springframework.boot", name = "spring-boot-starter-test" }
 spring-boot-starter-webflux = { group = "org.springframework.boot", name = "spring-boot-starter-webflux" }
 spring-boot-starter-data-mongodb-reactive = { group = "org.springframework.boot", name = "spring-boot-starter-data-mongodb-reactive" }
@@ -60,6 +64,7 @@ jackson-databind = { group = "com.fasterxml.jackson.core", name = "jackson-datab
 
 #logging
 slf4j-api = { group = "org.slf4j", name = "slf4j-api", version.ref = "org-slf4j" }
+logback-classic = { group = "ch.qos.logback", name = "logback-classic", version.ref = "ch-qos-logback" }
 
 #testing
 junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "org-junit-jupiter" }
