--- a/homeweather/src/main/resources/application.yml
+++ b/homeweather/src/main/resources/application.yml
@@ -13,4 +13,4 @@ spring:
     name: "homeweather"
 weather:
   open-weather-api-url: "https://api.openweathermap.org/data/3.0/onecall"
-  weather-plan-open-url: "http://localhost:8083/open/current"
+  weather-plan-open-url: ${OPEN_WEATHER_URL:http://localhost:8083/open/current}
