enviromentalizing variables in config files from hardcoded values

--- a/homeweather/src/test/resources/application-test.yml
+++ b/homeweather/src/test/resources/application-test.yml
@@ -1,5 +1,6 @@
 server:
-  port: 8082
+  port: ${SERVER_PORT:8082}
+  address: ${SERVER_ADDRESS:localhost}
 weather:
   home-weather:
     schema: "http"
