--- a/openweather/src/main/resources/application.yml
+++ b/openweather/src/main/resources/application.yml
@@ -1,17 +1,23 @@
 server:
   port: ${SERVER_PORT:8080}
   address: ${SERVER_ADDRESS:localhost}
-weather:
-  open-weather-api-url: "https://api.openweathermap.org/data/3.0/onecall"
-  weather-plan-open-url: "http://${server.address}:${server.port}/open/current"
+  tomcat:
+    remoteip:
+      protocol-header-https-value: http
 spring:
   application:
-    name: "openweather"
+    name: openweather
   data:
     mongodb:
       port: 27017
-      username: "user"
-      password: "pass"
+      username: user
+      password: pass
       host: ${MONGO:localhost}
-      database: "weather"
-      authentication-database: "admin"
+      database: weather
+      authentication-database: admin
+weather:
+  open-weather-api-url: https://api.openweathermap.org/data/3.0/onecall
+  gateway:
+    port: ${APIGATEWAY_SERVER_PORT}
+    address: ${APIGATEWAY_SERVER_ADDRESS}
+    schema: ${server.tomcat.remoteip.protocol-header-https-value}
