--- a/smssender/src/main/resources/application.yml
+++ b/smssender/src/main/resources/application.yml
@@ -1,22 +1,27 @@
 server:
   port: ${SERVER_PORT:8081}
   address: ${SERVER_ADDRESS:localhost}
+  tomcat:
+    remoteip:
+      protocol-header-https-value: http
 spring:
+  application:
+    name: smssender
   data:
     mongodb:
       port: 27017
-      username: "user"
-      password: "pass"
+      username: user
+      password: pass
       host: ${MONGO:localhost}
-      database: "weather"
-      authentication-database: "admin"
-  application:
-    name: "smssender"
+      database: ${DB_NAME}
+      authentication-database: admin
 twilio:
   twilio:
     accountSid: ${ACCOUNT_SID}
     authToken: ${AUTH_TOKEN}
     trialNumber: ${TRIAL_NUMBER}
-messenger:
-  schema: "http"
-  sub-domain: "localhost"
+weather:
+  gateway:
+    port: ${APIGATEWAY_SERVER_PORT}
+    address: ${APIGATEWAY_SERVER_ADDRESS}
+    schema: ${server.tomcat.remoteip.protocol-header-https-value}
