--- a/smssender/src/test/resources/application-test.yml
+++ b/smssender/src/test/resources/application-test.yml
@@ -1,15 +1,20 @@
 server:
-  port: 8081
+  address: localhost
+  tomcat:
+    remoteip:
+      protocol-header-https-value: http
+spring:
+  application:
+    name: smssender
 twilio:
   twilio:
-    accountSid: ${ACCOUNT_SID} #your account sid
-    authToken: ${AUTH_TOKEN} #your auth token
-    trialNumber: ${TRIAL_NUMBER} # your trial number
-messenger:
-  schema: "http"
-  sub-domain: "localhost"
+    accountSid: ${ACCOUNT_SID}
+    authToken: ${AUTH_TOKEN}
+    trialNumber: ${TRIAL_NUMBER}
 weather:
-  open-weather-api-url: "https://api.openweathermap.org/data/3.0/onecall"
-  weather-plan-open-url: "http://localhost:8083/open/current"
-gateway:
-  port: "8083"
+  open-weather-api-url: https://api.openweathermap.org/data/3.0/onecall
+  weather-plan-home-url: ${server.tomcat.remoteip.protocol-header-https-value}://localhost:8083/open/current
+  gateway:
+    port: 8083
+    address: localhost
+    schema: ${server.tomcat.remoteip.protocol-header-https-value:http}
