separating docker compose dev and test files

--- a/homeweather/src/test/resources/application-test.yml
+++ b/homeweather/src/test/resources/application-test.yml
@@ -8,10 +8,10 @@ spring:
     name: homeweather-test
   data:
     mongodb:
-      port: 27017
+      port: 27018
       username: user
       password: pass
-      host: ${MONGO:localhost}
+      host: localhost
       database: weather
       authentication-database: admin
 weather:
