--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ setup/.env
 smssender/src/test/resources/.env
 openweather/src/test/resources/.env
 homeweather/src/test/resources/.env
+.env.db.test
+.env.db.dev
