--- a/setup/docker-compose.yml
+++ b/setup/docker-compose.yml
@@ -1,22 +1,14 @@
 version: '3.8'
+networks:
+  weather-network:
+    name: weather-network
+    driver: bridge
 services:
-  mongodb:
-    container_name: mongo-db
-    image: mongodb/mongodb-community-server:6.0.4-ubi8
-    restart: always
-    env_file:
-      - .env
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
-    networks:
-      - weather-network
-    ports:
-      - ${MONGODB_SERVER_PORT}:${MONGODB_SERVER_PORT}
   homeweather:
     container_name: homeweather-service
     image: homeweather:1.0-SNAPSHOT
     env_file:
+      - .env.db.test
       - .env
     environment:
       - SERVER_PORT=${HOMEWEATHER_SERVER_PORT}
@@ -24,20 +16,21 @@ services:
       - APIGATEWAY_SERVER_PORT=${APIGATEWAY_SERVER_PORT}
       - APIGATEWAY_SERVER_ADDRESS=${APIGATEWAY_SERVER_ADDRESS}
       - DB_NAME=${DB_NAME}
-      - MONGO=mongo-db
+      - MONGO=${MONGO_SERVICE}
       - OPEN_WEATHER_URL=http://${OPENWEATHER_SERVER_ADDRESS}:${OPENWEATHER_SERVER_PORT}/api/open/current
     networks:
       - weather-network
     ports:
       - ${HOMEWEATHER_SERVER_PORT}:${HOMEWEATHER_SERVER_PORT}
     depends_on:
-      - mongodb
+      - ${MONGO_SERVICE}
       - openweather
       - apigateway
   openweather:
     container_name: openweather-service
     image: openweather:1.0-SNAPSHOT
     env_file:
+      - .env.db.test
       - .env
     environment:
       - SERVER_PORT=${OPENWEATHER_SERVER_PORT}
@@ -45,19 +38,20 @@ services:
       - APIGATEWAY_SERVER_PORT=${APIGATEWAY_SERVER_PORT}
       - APIGATEWAY_SERVER_ADDRESS=${APIGATEWAY_SERVER_ADDRESS}
       - DB_NAME=${DB_NAME}
-      - MONGO=mongo-db
-      - appid=${appid}
+      - MONGO=${MONGO_SERVICE}
+      - appid=${APPID}
     networks:
       - weather-network
     ports:
       - ${OPENWEATHER_SERVER_PORT}:${OPENWEATHER_SERVER_PORT}
     depends_on:
-      - mongodb
+      - ${MONGO_SERVICE}
       - apigateway
   smssender:
     container_name: smssender-service
     image: smssender:1.0-SNAPSHOT
     env_file:
+      - .env.db.test
       - .env
     environment:
       - SERVER_PORT=${SMSSENDER_SERVER_PORT}
@@ -65,23 +59,24 @@ services:
       - APIGATEWAY_SERVER_PORT=${APIGATEWAY_SERVER_PORT}
       - APIGATEWAY_SERVER_ADDRESS=${APIGATEWAY_SERVER_ADDRESS}
       - DB_NAME=${DB_NAME}
-      - MONGO=mongo-db
+      - MONGO=${MONGO_SERVICE}
       - ACCOUNT_SID=${ACCOUNT_SID}
       - AUTH_TOKEN=${AUTH_TOKEN}
       - TRIAL_NUMBER=${TRIAL_NUMBER}
-      - appid=${appid}
+      - appid=${APPID}
     networks:
       - weather-network
     ports:
       - ${SMSSENDER_SERVER_PORT}:${SMSSENDER_SERVER_PORT}
     depends_on:
-      - mongodb
+      - ${MONGO_SERVICE}
       - openweather
       - apigateway
   apigateway:
     container_name: apigateway-service
     image: apigateway:1.0-SNAPSHOT
     env_file:
+      - .env.db.test
       - .env
     environment:
 #      server
@@ -95,7 +90,3 @@ services:
       - weather-network
     ports:
       - ${APIGATEWAY_SERVER_PORT}:${APIGATEWAY_SERVER_PORT}
-networks:
-  weather-network:
-    name: weather-network
-    driver: bridge
