--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
-  port: ${SERVER_PORT:8083}
-  address: ${SERVER_ADDRESS:localhost}
+  port: ${SERVER_PORT}
+  address: ${SERVER_ADDRESS}
 management:
   endpoints:
     web:
@@ -16,21 +16,21 @@ spring:
     gateway:
       routes:
         - id: smssender-route
-          uri: ${SMSSENDER_ROUTE_URI:http://localhost:8081}
+          uri: ${SMSSENDER_ROUTE_URI}
           predicates:
             - Path=/twilio/**
           filters:
             - PrefixPath=/api
             - AddResponseHeader=X-Powered-By,Gateway Service
         - id: openweather-route
-          uri: ${OPENWEATHER_ROUTE_URI:http://localhost:8080}
+          uri: ${OPENWEATHER_ROUTE_URI}
           predicates:
             - Path=/open/**
           filters:
             - PrefixPath=/api
             - AddResponseHeader=X-Powered-By,Gateway Service
         - id: homeweather-route
-          uri: ${HOMEWEATHER_ROUTE_URI:http://localhost:8082}
+          uri: ${HOMEWEATHER_ROUTE_URI}
           predicates:
             - Path=/home/**
           filters:
